--- a/web/src/components/app-home/app-home.css
+++ b/web/src/components/app-home/app-home.css
@@ -19,6 +19,19 @@ button {
   cursor: pointer;
 }
   
+.datastore-cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.title {
+  font-size: 36px;
+  color: #eee;
+  margin-left: 12px;
+  font-weight: 500;
+}
+
 button:hover {
   box-shadow: 0 3px 6px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.1);
   transform: translateY(1px);
